tools/vz/pkg/internal/test/cluster/testCattleSystempods/cluster-snapshot/cattle-system/helm-operation-dlhvn/logs.txt
# Copyright (c) 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
==== START logs for container helm of pod cattle-system/helm-operation-dlhvn ====
helm upgrade --history-max=5 --install=true --namespace=cattle-system --reset-values=true --timeout=5m0s --values=/home/shell/helm/values-rancher-webhook-1.0.4-up0.2.5.yaml --version=1.0.4+up0.2.5 --wait=true rancher-webhook /home/shell/helm/rancher-webhook-1.0.4-up0.2.5.tgz
Release "rancher-webhook" does not exist. Installing it now.
Error: release: already exists
==== END logs for container helm of pod cattle-system/helm-operation-dlhvn ====
==== START logs for container proxy of pod cattle-system/helm-operation-dlhvn ====
W0616 10:26:55.200721       7 proxy.go:162] Request filter disabled, your proxy is vulnerable to XSRF attacks, please be cautious
Starting to serve on REDACTED-IP4-ADDRESS:8001
==== END logs for container proxy of pod cattle-system/helm-operation-dlhvn ====
